# DoubleDispatch

./: .gitignore
src/: CMakeLists.txt  main.cpp
src/Algorithms/: CMakeLists.txt  SpecificAlgorithmA.cpp  SpecificAlgorithmA.hpp  SpecificAlgorithmB.cpp  SpecificAlgorithmB.hpp
src/Geometry/: CMakeLists.txt  CylindricalSolid.cpp  CylindricalSolid.hpp  PlanarSolid.cpp  PlanarSolid.hpp  Solid.hpp  SolidAlgorithm.hpp
src/all_tests/: CMakeLists.txt
src/namespace1/: CMakeLists.txt  Class1.cpp  Class1.hpp
src/namespace1/test/: CMakeLists.txt  Test_Class1.cpp  main.cpp
src/namespace2/: CMakeLists.txt  Class2.cpp  Class2.hpp
src/namespace2/test/: CMakeLists.txt  Test_Class2.cpp  main.cpp
